force-app/main/default/objects/fmginvmove__c/fmginvmove__c.object-meta.xml
<CustomObject>
    <description>Inventory move activities</description>
    <label>FMG Inventory Move</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>FMG Inventory Move Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMG Inventory Moves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>