force-app/main/default/objects/fmginvmove__c/fields/fmginvmove_icitem__c.field-meta.xml
<CustomField>
    <fullName>fmginvmove_icitem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item Master</label>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>FMG Inventory Moves</relationshipLabel>
    <relationshipName>fmginvmoveicitem</relationshipName>
    <type>Lookup</type>
</CustomField>