force-app/main/default/objects/fmginvmove__c/fields/fmginvmove_sydatat__c.field-meta.xml
<CustomField>
    <fullName>fmginvmove_sydatat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SYDATA Transfer Object</label>
    <referenceTo>rstk__sydatat__c</referenceTo>
    <relationshipLabel>FMG Inventory Moves</relationshipLabel>
    <relationshipName>fmginvmovesydatat</relationshipName>
    <type>Lookup</type>
</CustomField>