force-app/main/default/objects/fmginvmove__c/fields/formula_itemname__c.field-meta.xml
<CustomField>
    <fullName>formula_itemname__c</fullName>
    <formula>fmginvmove_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
    <label>Item Number</label>
    <type>Text</type>
</CustomField>