force-app/main/default/objects/fmginvmove__c/fields/fromlocnum__c.field-meta.xml
<CustomField>
    <fullName>fromlocnum__c</fullName>
    <label>From Location Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>