force-app/main/default/objects/fmginvmove__c/fields/fromsylocid__c.field-meta.xml
<CustomField>
    <fullName>fromsylocid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Inventory Location ID</label>
    <referenceTo>rstk__sylocid__c</referenceTo>
    <relationshipLabel>FMG Inventory Moves</relationshipLabel>
    <relationshipName>fromsylocid</relationshipName>
    <type>Lookup</type>
</CustomField>