force-app/main/default/objects/fmginvmove__c/fields/qty__c.field-meta.xml
<CustomField>
    <fullName>qty__c</fullName>
    <label>value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>