force-app/main/default/objects/fmginvmove__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>This indicates what the status is of the move</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>InProcess</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>