force-app/main/default/objects/fmginvmove__c/fields/SYDATA_Status__c.field-meta.xml
<CustomField>
    <fullName>SYDATA_Status__c</fullName>
    <formula>TEXT(fmginvmove_sydatat__r.rstk__sydata_process__c)</formula>
    <label>SYDATA Status</label>
    <type>Text</type>
</CustomField>