force-app/main/default/objects/fmginvmove__c/fields/tolocnum__c.field-meta.xml
<CustomField>
    <fullName>tolocnum__c</fullName>
    <label>To Location Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>