force-app/main/default/objects/fmginvmove__c/fields/tosylocid__c.field-meta.xml
<CustomField>
    <fullName>tosylocid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Inventory Location ID</label>
    <referenceTo>rstk__sylocid__c</referenceTo>
    <relationshipLabel>FMG Inventory Moves</relationshipLabel>
    <relationshipName>tosylocid</relationshipName>
    <type>Lookup</type>
</CustomField>