force-app/main/default/objects/fmginvmove__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>fmginvmove_icitem__c</columns>
    <columns>fromsylocid__c</columns>
    <columns>fromlocnum__c</columns>
    <columns>status__c</columns>
    <columns>tosylocid__c</columns>
    <columns>tolocnum__c</columns>
    <columns>fmginvmove_sydatat__c</columns>
    <columns>qty__c</columns>
    <columns>formula_itemname__c</columns>
    <columns>SYDATA_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>